# WignerSource

./: CMakeLists.txt  CWignerSource.cpp  CWignerSource.h  CWignerUtils.cpp  CWignerUtils.h  Dockerfile  Doxyfile  README.md  WignerLinkDef.h  WignerSource.cpp  rootlogon.C  run.sh  rundocker.sh  scripts.md  simulation.sh  wignerenv.sh  wignersim.cpp  wignertest.cpp  wignertest2.cpp
config/: default.txt
include/: CWignerSource.h  CWignerUtils.h
macros/: makeplots.cpp  wignersim.cpp
src/: CWignerSource.cpp  CWignerUtils.cpp  wigneroot.cpp
